add_executable(aufgabe aufgabe.cpp math.cpp)
add_executable(aufgabe_1_3 aufgabe_1_3.cpp math.cpp)
add_executable(aufgabe_1_4 aufgabe_1_4.cpp)

#target_link_libraries(helloworld my_own_library)

add_executable(tests tests.cpp)


# Kommentieren Sie die folgenden Zeilen fuer die Aufgabe `mile_to_kilometer` aus
#add_executable(mile_to_kilometer mile_to_kilometer.cpp)
