add_executable(aufgabe aufgabe.cpp math.cpp)
add_executable(aufgabe_1_3 aufgabe_1_3.cpp math.cpp)
add_executable(aufgabe_1_4 aufgabe_1_4.cpp)

#target_link_libraries(helloworld my_own_library)

add_executable(tests tests.cpp math.cpp)
add_executable(aufgabe_1_9 aufgabe_1_9.cpp)
add_executable(aufgabe_1_10 aufgabe_1_10.cpp)
add_executable(aufgabe_1_11 aufgabe_1_11.cpp)
add_executable(aufgabe_1_12 aufgabe_1_12.cpp)
add_executable(aufgabe_1_13 aufgabe_1_13.cpp)
add_executable(aufgabe_1_14 aufgabe_1_14.cpp)

# Kommentieren Sie die folgenden Zeilen fuer die Aufgabe `mile_to_kilometer` aus
#add_executable(mile_to_kilometer mile_to_kilometer.cpp)
